# modern-devops

./: Dockerfile  README.md  apprunner.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: copilot.yaml
